<resources>
    <string name="about_str">"版本: %s
米络科技 版权所有
Copyright © 2012–2016 Melot.
All Rights Reserved."</string>
    <string name="account_from_str">充值渠道:</string>
    <string name="account_hint">请输入ID号</string>
    <string name="account_illegal_chars">账号包含不允许的字符</string>
    <string name="account_length_max_tip">账号长度不应大于%s位</string>
    <string name="account_length_min_tip">账号长度不应小于%s位</string>
    <string name="account_mobile_hint">请输入您的手机号码</string>
    <string name="account_phonenum_hint">请输入手机号</string>
    <string name="account_userid_hint">请输入ID号</string>
    <string name="account_username_hint">手机号/ID号/用户名</string>
    <string name="activity_notify">活动详情</string>
    <string name="addfriend">添加好友</string>
    <string name="again_verify_code">秒后重新获取</string>
    <string name="agreement">《KK用户注册协议》</string>
    <string name="agreementtitle">KK用户注册协议</string>
    <string name="alipay_is_paying">正在支付</string>
    <string name="alipay_is_success_get_meshow_money">支付成功，正在更新K币</string>
    <string name="alipay_plugin_check_failed">支付宝插件检测失败</string>
    <string name="alipay_plugin_confirm_download">"为保证您的交易安全，请下载安装支付宝安全支付服务后进行付款。

点击确定，立即下载。"</string>
    <string name="alipay_plugin_confirm_download_hint">下载提示</string>
    <string name="alipay_plugin_confirm_downloading">正在下载</string>
    <string name="alipay_plugin_confirm_install">"为保证您的交易安全，请安装支付宝安全支付服务后进行付款。

点击确定，立即安装。"</string>
    <string name="alipay_plugin_confirm_install_hint">安装提示</string>
    <string name="alipay_plugin_confirm_update">"您的支付宝安全支付服务有更新。

点击确定，立即下载。"</string>
    <string name="alipay_plugin_confirm_update_hint">更新提示</string>
    <string name="alipay_plugin_download_failed">网络不稳定，下载插件失败</string>
    <string name="alipay_remote_server_failed">支付服务正在进行升级操作。</string>
    <string name="alipay_select_other_fillmoney">选择其他支付方式</string>
    <string name="alipay_subject">购买K币</string>
    <string name="app_name">棒直播</string>
    <string name="apply_id_number_used">您填写的身份证号码已被用于其他KK账号的实名认证~</string>
    <string name="apply_in_black_list">您已被列入黑名单，如有疑问，请联系官方运营</string>
    <string name="apply_info_used">您填写的信息已被用于其他KK账号的实名认证~</string>
    <string name="apply_mobile_used">您填写的手机号已被用于其他KK账号的实名认证~</string>
    <string name="apply_past_30">您的实名认证申请已超出有效期，请联系官方运营重新申请~</string>
    <string name="areaadd">本月新增%s人</string>
    <string name="areacount">%s人</string>
    <string name="areaelectnone">啊哦~没有地区信息</string>
    <string name="areaselectfail">获取地区信息失败</string>
    <string name="areaselecttitle">地点漫游</string>
    <string name="bang_exchange">K币兑换</string>
    <string name="bang_exchange_result">已兑换%sK币</string>
    <string name="bang_exchange_rule">收益结算规则</string>
    <string name="bang_exchange_rule_first">1 用户送给主播K币，主播将以1：1的比例收到棒票。如用户赠送1000K币 （￥1）的礼物给主播，主播可获得1000棒票</string>
    <string name="bang_exchange_rule_fourth">4 以上所有条款的最终解释权归棒Bang直播APP所有。</string>
    <string name="bang_exchange_rule_second">2 主播可将棒票兑换为K币继续使用，兑换比例为2：1。 如主播可用10000棒票，兑换5000K币。</string>
    <string name="bang_exchange_rule_third">3 其他兑换问题，请咨询运营QQ 2253114587</string>
    <string name="bang_exchange_rule_title">收益结算规则</string>
    <string name="bang_exchange_ticket_balance">收入棒票余额</string>
    <string name="bang_exchange_to_kk">兑换</string>
    <string name="bang_exchange_warn">"将我收入的棒票兑换为我账户中的K币
兑换比例为1:1"</string>
    <string name="bang_income">收益</string>
    <string name="bang_ticket_income">收入棒票</string>
    <string name="bang_ticket_income_month">本月棒票收入</string>
    <string name="bang_ticket_income_today">今日棒票收入</string>
    <string name="bang_ticket_not_enough">收入棒票余额不足</string>
    <string name="bind_phone_count_limit">啊哦~您的手机号达到本日获取绑定手机号的验证码上限了，明天再来试试吧!</string>
    <string name="bind_phone_failed">绑定失败</string>
    <string name="bind_phone_help">KK会发送一条验证短信到您的手机，请您耐心等待。我们不会向任何用户公开您的手机号。</string>
    <string name="bind_phone_tips_act">绑定手机号后，您可以使用手机号进行登录、找回密码。</string>
    <string name="cancel_login">取消登录</string>
    <string name="card_account">请输入充值卡序列号</string>
    <string name="card_money">充值卡实际面额:</string>
    <string name="card_money_not_enough">充值金额大于充值卡面额</string>
    <string name="card_money_type">充值卡实际面额%s</string>
    <string name="card_pwd">请输入充值卡密码</string>
    <string name="change_poster_btn_text">更换</string>
    <string name="chatroom">聊天室</string>
    <string name="check_pwd">确认密码</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="column_city">同城主播</string>
    <string name="column_rank">周星争夺战</string>
    <string name="column_rank_in">查看排行榜</string>
    <string name="column_recommend">兴趣推荐</string>
    <string name="company_name">杭州米络科技有限公司</string>
    <string name="contact_add_group">添加群组</string>
    <string name="coupon_get_list">正在获取您的优惠券列表,请稍后…</string>
    <string name="coupon_not_list">您当前没有优惠券。</string>
    <string name="coupon_not_today">有效期：今日到期</string>
    <string name="coupon_please">请选择您的优惠券</string>
    <string name="coupon_recharge_chong_tips">(充值加送 %s</string>
    <string name="coupon_recharge_string_tips">充值加送 %s</string>
    <string name="coupon_recharge_title">充值优惠:</string>
    <string name="coupon_recharge_title_type">充值优惠%s</string>
    <string name="coupon_select_payment_type">请选择您的充值方式%s</string>
    <string name="coupon_use_not">暂不使用</string>
    <string name="coupon_valid_string_tips">有效期：%s天</string>
    <string name="default_group_name">默认分组</string>
    <string name="delete_account_btn">删除</string>
    <string name="delete_account_chat_msg">清空该账号聊天记录</string>
    <string name="delete_account_info">您确定要删除该账号吗？</string>
    <string name="discuss_group">讨论组</string>
    <string name="enter_phone">手机号</string>
    <string name="family_honor_character">第%s名</string>
    <string name="family_honor_type_bigcrown">巨钻主播</string>
    <string name="family_honor_type_consume">家族消费</string>
    <string name="family_honor_type_crown">超冠主播</string>
    <string name="family_honor_type_medal">勋章成员</string>
    <string name="family_honor_type_pop">家族人气</string>
    <string name="family_honor_type_time">直播时长</string>
    <string name="fill_money_alipay">支付宝充值</string>
    <string name="fill_money_alipay_plugin_check">正在检测是否安装支付宝插件</string>
    <string name="fill_money_chinamobile">移动手机话费支付</string>
    <string name="fill_money_chinaunicom">联通手机话费支付</string>
    <string name="fill_money_else">其他充值金额</string>
    <string name="fill_money_get" formatted="false">充值%s元可获得%sK币</string>
    <string name="fill_money_payeco">易联充值</string>
    <string name="fill_money_wechat">微信支付</string>
    <string name="fill_tips">重要提示:</string>
    <string name="fill_tips_content1">1. 请务必选择与您手中充值卡一样的面值</string>
    <string name="fill_tips_content2">2. 充值提交后需要1到2分钟的处理，请耐心等待</string>
    <string name="fill_tips_content3">3. 如遇问题请联系客服 QQ: 2322590867</string>
    <string name="follow_room_pos_tag">follow_room_pos_tag</string>
    <string name="forget">找回密码</string>
    <string name="forget_baL">+86</string>
    <string name="forget_help">找回密码仅支持已绑定手机的帐号，如果您未绑定手机号，请联系客服人工找回。</string>
    <string name="forget_phone_count_limit">啊哦~您的手机号达到本日获取找回密码的验证码上限了，明天再来试试吧!</string>
    <string name="forget_phone_failed">找回密码失败</string>
    <string name="forget_pw">忘记密码</string>
    <string name="get_promotion_failed">获取优惠信息失败，您可以继续支付</string>
    <string name="get_user_info_failed">同步用户信息失败</string>
    <string name="get_userinfo_failed">获取信息失败</string>
    <string name="get_verify_code_ret">获取验证码</string>
    <string name="getting_rooms">正在获取列表…</string>
    <string name="home_contact_tab">联系人</string>
    <string name="image_description">kktv</string>
    <string name="include_year_date" formatted="false">%s年%s月%s日 %s:%s</string>
    <string name="input_money_max_tip">充值金额不得大于50000元</string>
    <string name="input_pwd_hint">密码</string>
    <string name="input_pwd_hint2">请输入您的密码</string>
    <string name="kas_login">用开迅账号登录</string>
    <string name="kk_account_login">KK账号登录</string>
    <string name="kk_account_pwd_wrong">您的账号和密码不匹配</string>
    <string name="kk_account_update_content">"尊敬的用户：您好，很抱歉为您带来不便。由于KK账号体系升级，您的&lt;font color='#ff74e0'>纯数字用户名&lt;/font>暂时无法登录。请联系客服，QQ：4008269186，谢谢！"</string>
    <string name="kk_account_update_notification">账号升级通知</string>
    <string name="kk_account_update_tips">"        尊敬的用户您好！我们将于近期对账号体系进行升级，届时将不再支持&lt;font color='#ff74e0'>纯数字用户名&lt;/font>，请及时修改您的用户名，谢谢！"</string>
    <string name="kk_account_update_title">账号体系升级通知</string>
    <string name="kk_activity_id">活动ID</string>
    <string name="kk_activity_img_url">图片链接</string>
    <string name="kk_activity_title">活动内容</string>
    <string name="kk_activity_url">活动链接</string>
    <string name="kk_add_attention_ing">正在关注…</string>
    <string name="kk_add_follow">加关注</string>
    <string name="kk_add_form_failed">生成订单失败</string>
    <string name="kk_add_photo_title">添加照片</string>
    <string name="kk_aftertomorrow">后天</string>
    <string name="kk_agreed">已同意</string>
    <string name="kk_air_ticket">飞机票</string>
    <string name="kk_air_ticket_notify">分享了一张飞机票</string>
    <string name="kk_all">全部</string>
    <string name="kk_already_login">已经登录频道</string>
    <string name="kk_anchor">播主</string>
    <string name="kk_app_update_now">立即升级</string>
    <string name="kk_appling_family_applying">您正在申请家族主播</string>
    <string name="kk_appling_family_end"> 查看申请状态</string>
    <string name="kk_appling_family_start">请至KKTV网页端输入网址：</string>
    <string name="kk_apply">申请</string>
    <string name="kk_apply_become_free_actor">成为自由主播</string>
    <string name="kk_apply_can_not">您已是%s家族的成员，无法开播。如需继续，请先退出家族~</string>
    <string name="kk_apply_live_failed">提交失败,请重试</string>
    <string name="kk_apply_live_succeed">提交申请成功</string>
    <string name="kk_cancel">取消</string>
    <string name="kk_game_agreement">《KK直播服务协议》</string>
    <string name="kk_know">知道了</string>
    <string name="kk_login_kk">登录KK账号</string>
    <string name="kk_more_gag">禁言五分钟</string>
    <string name="kk_qq_login">QQ账号登录</string>
    <string name="kk_register">注册新用户</string>
    <string name="kk_unknow_error_tip1">您可以进行以下操作：</string>
    <string name="kk_unknow_error_tip2">稍后再来看看</string>
    <string name="kk_unknow_error_tip3">截图并联系客服：%s</string>
    <string name="kk_uploadpic_notify">上传手持身份证照片</string>
    <string name="kk_vert_roommem_dialog_complaint_str">举报Ta</string>
    <string name="kk_vert_roommem_dialog_report_attack">涉黄涉毒</string>
    <string name="kk_vert_roommem_dialog_report_bawdy">淫秽色情</string>
    <string name="kk_vert_roommem_dialog_report_other">其他</string>
    <string name="kk_vert_roommem_dialog_report_spam">政治宗教言论</string>
    <string name="kk_weibo_login">新浪微博登录</string>
    <string name="kk_weixin_login">微信账号登录</string>
    <string name="main_apply_live_apply_go">提交申请</string>
    <string name="main_apply_live_input_card">身份证号</string>
    <string name="main_apply_live_input_name">真实姓名</string>
    <string name="main_apply_live_input_operateid">运营ID（选填）</string>
    <string name="main_apply_live_input_phone">手机号码（选填）</string>
    <string name="main_apply_live_tip">TIPS:</string>
    <string name="main_apply_live_tip1">1. 请确保填写真实有效的资料并上传清晰的手持证件照。</string>
    <string name="main_apply_live_tip2">2. 非大陆用户可上传当地身份证、护照等其它有效证件。</string>
    <string name="main_start_live">开始直播</string>
    <string name="main_start_live_change">更换</string>
    <string name="main_start_live_done">完成</string>
    <string name="main_start_live_hint">说点什么吧…</string>
    <string name="main_start_live_title">直播主题</string>
    <string name="more_count_bind">账号绑定</string>
    <string name="next">下一步</string>
    <string name="register_agree">注册即视为同意</string>
    <string name="s_phone_number">4008269186</string>
    <string name="select_payment_chinaunicom">中国联通充值</string>
    <string name="select_payment_cup">银联手机支付</string>
    <string name="select_payment_shenzhoufu">手机充值卡充值</string>
    <string name="select_payment_type">请选择您的充值方式：</string>
    <string name="serviceHotline">客服热线</string>
</resources>