<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/kk_background_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include layout="@layout/kk_title_bar" />
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ScrollView android:background="@color/kk_me_background" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/kk_background_white" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <View android:layout_width="1.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <FrameLayout android:layout_width="195.0dip" android:layout_height="193.0dip" android:layout_marginTop="23.0dip">
                    <ImageView android:id="@id/img_poster" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/default_apply_identification" android:scaleType="centerCrop" />
                    <RelativeLayout android:id="@id/layout_poster" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <TextView android:textSize="14.0sp" android:textColor="@color/kk_text_white" android:gravity="center" android:id="@id/txt_delete" android:background="@color/kk_color_6f6f6f" android:layout_width="fill_parent" android:layout_height="32.0dip" android:text="@string/kk_uploadpic_notify" android:layout_alignParentBottom="true" />
                    </RelativeLayout>
                </FrameLayout>
                <View android:layout_width="1.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <EditText android:textSize="15.0sp" android:id="@id/real_name" android:layout_width="fill_parent" android:layout_height="47.0dip" android:layout_marginTop="25.0dip" android:hint="@string/main_apply_live_input_name" android:imeOptions="actionNext" android:nextFocusForward="@id/txt_card" style="@style/kk_game_input_style" />
                <EditText android:textSize="15.0sp" android:id="@id/txt_card" android:layout_width="fill_parent" android:layout_height="47.0dip" android:layout_marginTop="11.0dip" android:hint="@string/main_apply_live_input_card" android:imeOptions="actionNext" android:nextFocusForward="@id/txt_phone" style="@style/kk_game_input_style" />
                <EditText android:textSize="15.0sp" android:id="@id/txt_phone" android:layout_width="fill_parent" android:layout_height="47.0dip" android:layout_marginTop="11.0dip" android:hint="@string/main_apply_live_input_phone" android:inputType="phone" android:imeOptions="actionDone" style="@style/kk_game_input_style" />
                <EditText android:textSize="15.0sp" android:id="@id/txt_operateid" android:layout_width="fill_parent" android:layout_height="47.0dip" android:layout_marginTop="11.0dip" android:hint="@string/main_apply_live_input_operateid" android:inputType="phone" android:imeOptions="actionDone" style="@style/kk_game_input_style" />
                <View android:layout_width="1.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <Button android:textSize="18.0sp" android:textColor="@color/kk_btn_a_selector" android:gravity="center" android:id="@id/btn_apply" android:background="@drawable/kk_btn_a_selector" android:layout_width="fill_parent" android:layout_height="41.0dip" android:layout_marginTop="25.0dip" android:text="@string/main_apply_live_apply_go" />
                <TextView android:textSize="14.0sp" android:textColor="@color/kk_cccccc" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/main_apply_live_tip" />
                <TextView android:textSize="13.0sp" android:textColor="@color/kk_cccccc" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/main_apply_live_tip1" />
                <TextView android:textSize="13.0sp" android:textColor="@color/kk_cccccc" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="23.0dip" android:text="@string/main_apply_live_tip2" />
                <View android:layout_width="1.0dip" android:layout_height="0.0dip" android:layout_weight="2.0" />
            </LinearLayout>
        </ScrollView>
        <TextView android:textSize="14.0sp" android:textColor="@color/kk_fc1616" android:id="@id/check_result" android:background="@color/kk_color_half_c8c8c8" android:paddingLeft="12.0dip" android:paddingTop="6.0dip" android:paddingRight="12.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/apply_past_30" android:lineSpacingExtra="10.0dip" />
    </FrameLayout>
</LinearLayout>