<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/kk_text_black" android:gravity="center" android:id="@id/shutup" android:background="@color/kk_background_white" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/kk_more_gag" />
    <View android:background="#ffefefef" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <TextView android:textSize="13.0sp" android:textColor="@color/kk_text_black" android:gravity="center" android:id="@id/complaint" android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/kk_vert_roommem_dialog_complaint_str" />
    <View android:background="#ffefefef" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <TextView android:textColor="@color/kk_text_black" android:gravity="center" android:id="@id/cancel" android:background="@color/kk_background_white" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/kk_cancel" />
</LinearLayout>