<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/kk_game_main_gray" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/poster" android:layout_width="fill_parent" android:layout_height="320.0dip" android:src="@drawable/app_icon" android:layout_alignParentTop="true" />
        <ImageView android:id="@id/close_btn" android:paddingTop="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/kk_close_btn" android:layout_alignParentRight="true" style="@style/kk_view_padding" />
        <Button android:textSize="13.0sp" android:textColor="@color/kk_game_text_black" android:id="@id/change_btn" android:background="@drawable/kk_change_btn" android:layout_width="68.0dip" android:layout_height="26.0dip" android:layout_marginBottom="22.0dip" android:text="@string/main_start_live_change" android:layout_alignRight="@id/close_btn" android:layout_alignBottom="@id/poster" style="@style/kk_view_marging_right" />
        <View android:id="@id/hover_view" android:background="@color/kk_game_text_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignTop="@id/poster" android:layout_alignBottom="@id/poster" android:alpha="0.3" />
        <EditText android:textSize="13.0sp" android:textColor="@color/kk_game_text_gray" android:gravity="top" android:id="@id/live_content" android:layout_width="fill_parent" android:layout_height="80.0dip" android:hint="@string/main_start_live_hint" android:singleLine="false" android:layout_below="@id/poster" />
        <Button android:textSize="16.0sp" android:textColor="@color/kk_game_btn_wihite" android:id="@id/start_btn" android:background="@color/kk_game_text_black" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginBottom="10.0dip" android:text="@string/main_start_live" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/top_bar" android:background="@color/kk_game_main_gray" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/kk_game_text_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_start_live_title" android:layout_centerInParent="true" />
        <TextView android:textSize="13.0sp" android:textColor="@color/kk_game_text_black" android:id="@id/done_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_start_live_done" android:layout_alignParentRight="true" style="@style/kk_view_marging_right" />
    </RelativeLayout>
</RelativeLayout>