<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/phone_number_register_root" android:background="@color/kk_background_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/phone_number_register_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip">
        <EditText android:enabled="false" android:textSize="14.0sp" android:textColorHint="@color/kk_app_color_edit_hint" android:gravity="center" android:id="@id/country_edit" android:background="@drawable/kk_login_edit_bg" android:layout_width="52.0dip" android:layout_height="40.0dip" android:text="@string/forget_baL" android:hint="@string/forget_baL" android:ems="10" />
        <com.melot.kkcommon.widget.EditInputLayout android:id="@id/phone_num_edit" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" />
    </LinearLayout>
    <Button android:enabled="false" android:textSize="@dimen/kk_button_text" android:textColor="@color/kk_btn_a_selector" android:id="@id/next_button" android:background="@drawable/kk_btn_a_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="20.0dip" android:text="@string/next" android:onClick="nextClick" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/top_view_din" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <TextView android:textColor="@color/kk_app_tips_text" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_agree" />
        <TextView android:textColor="@color/kk_game_orange" android:id="@id/agreement2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kk_game_agreement" />
    </LinearLayout>
</LinearLayout>