<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="bottom|center" android:id="@id/pop_login_root" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/login_layout" android:background="@color/kk_background_white" android:layout_width="312.0dip" android:layout_height="wrap_content">
        <ImageView android:gravity="center_horizontal" android:layout_width="85.0dip" android:layout_height="85.0dip" android:layout_marginTop="34.0dip" android:src="@drawable/kk_login_top_bg" />
        <TextView android:textSize="@dimen/kk_text_large_size" android:textColor="@color/kk_text_white" android:gravity="center" android:id="@id/weibo_btn" android:background="@drawable/kk_regpop_weibo_btn" android:layout_width="fill_parent" android:layout_height="37.0dip" android:layout_marginLeft="43.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="43.0dip" android:text="@string/kk_weibo_login" android:singleLine="true" />
        <TextView android:textSize="@dimen/kk_text_large_size" android:textColor="@color/kk_text_white" android:gravity="center" android:id="@id/qq_btn" android:background="@drawable/kk_regpop_qq_btn" android:layout_width="fill_parent" android:layout_height="37.0dip" android:layout_marginLeft="43.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="43.0dip" android:text="@string/kk_qq_login" android:singleLine="true" />
        <TextView android:textSize="@dimen/kk_text_large_size" android:textColor="@color/kk_text_white" android:gravity="center" android:id="@id/weixin_btn" android:background="@drawable/kk_regpop_weixin_btn" android:layout_width="fill_parent" android:layout_height="37.0dip" android:layout_marginLeft="43.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="43.0dip" android:text="@string/kk_weixin_login" android:singleLine="true" />
        <RelativeLayout android:id="@id/register_login_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="43.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="43.0dip" android:layout_marginBottom="22.0dip">
            <Button android:textSize="13.0sp" android:textColor="@color/kk_room_text_gray" android:gravity="center" android:id="@id/quick_register" android:background="@drawable/kk_regpop_login_btn" android:layout_width="90.0dip" android:layout_height="37.0dip" android:layout_marginRight="30.0dip" android:text="@string/kk_register" android:singleLine="true" android:layout_alignParentLeft="true" />
            <Button android:textSize="13.0sp" android:textColor="@color/kk_room_text_gray" android:gravity="center" android:id="@id/login" android:background="@drawable/kk_regpop_login_btn" android:layout_width="90.0dip" android:layout_height="37.0dip" android:text="@string/kk_login_kk" android:singleLine="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>